# RustDocsHandsOn

./: .gitlab-ci.yml  README.md
Managing-Growing-Projects/restaurant/src/: lib.rs
Mini-Grep/minigrep/src/: lib.rs  main.rs
array_working/: Cargo.toml
array_working/src/: main.rs
common-collection/collections/src/: Strings.rs  final.rs  hashing.rs  main.rs
enums_and_pattern/: Cargo.toml
enums_and_pattern/src/: final.rs  main.rs
error-handling/errors/creating-a-file/creating_file/: Cargo.toml
error-handling/errors/creating-a-file/creating_file/src/: main.rs
error-handling/errors/src/: main.rs  result_enum.rs
funtions_working/: Cargo.toml
funtions_working/src/: main.rs  return_values.rs
generics/src/: main.rs
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/Written_notes/: data_types.txt
hello_cargo/src/: cmd.txt
hello_world/: main.rs
minigrep/: Dockerfile  poem.txt
minigrep/src/: lib.rs
references_and_borrowing/src/: main.rs
references_and_borrowing/src/Text Notes/: References.txt
traits-and-dispatch/traits/src/: main.rs
understanding-ownership/understanding_ownership/src/: main.rs
understanding-structures/area_rectangle/src/: main.rs
understanding-structures/method-syntax/src/: main.rs
understanding_ownership/Notes/: Ownership.txt
writing-automated-test/adder/src/: lib.rs
