[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# the file is the TOML format (Tom's Obvious, Minimal Language)
#decribes the dependencies and tge version of the package